# Animus_ERP

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: backend_ci.yaml
backend/: .exemple.env  alembic.ini  app.py  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 66afad318245_create_product_table.py
backend/src/config/: database_settings.py
backend/src/database/: database_connection.py
backend/src/model/: __init__.py  product_model.py
backend/src/routes/: root_route.py
backend/tests/: conftest.py
backend/tests/database/: database_connection_test.py
backend/tests/routes/: root_route_test.py
